--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ a {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1140px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
@@ -35,4 +35,26 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 80px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 20px;
+  background: #fff;
+  height: 80px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #00bafc;
 }
